force-app/main/default/objects/PurchasePlan__c/PurchasePlan__c.object-meta.xml
<CustomObject>
    <label>Purchase Plan</label>
    <nameField>
        <label>Quotation/Bid Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>