force-app/main/default/objects/PurchasePlan__c/fields/AI_RFXNumber__c.field-meta.xml
<CustomField>
    <fullName>AI_RFXNumber__c</fullName>
    <displayFormat>RFX{000}</displayFormat>
    <label>AI_RFXNumber</label>
    <type>AutoNumber</type>
</CustomField>