force-app/main/default/objects/PurchasePlan__c/fields/BidMethod__c.field-meta.xml
<CustomField>
    <fullName>BidMethod__c</fullName>
    <label>Bid Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>