force-app/main/default/objects/PurchasePlan__c/fields/BidName__c.field-meta.xml
<CustomField>
    <fullName>BidName__c</fullName>
    <label>Bid Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>