force-app/main/default/objects/PurchasePlan__c/fields/BidQualification__c.field-meta.xml
<CustomField>
    <fullName>BidQualification__c</fullName>
    <label>Bid Qualification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>