force-app/main/default/objects/PurchasePlan__c/fields/BidType__c.field-meta.xml
<CustomField>
    <fullName>BidType__c</fullName>
    <label>Bid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>