force-app/main/default/objects/PurchasePlan__c/fields/ConfigurationCostFlag__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationCostFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Configuration Cost Flag</label>
    <type>Checkbox</type>
</CustomField>