force-app/main/default/objects/PurchasePlan__c/fields/Consortium__c.field-meta.xml
<CustomField>
    <fullName>Consortium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consortium</label>
    <type>Checkbox</type>
</CustomField>