force-app/main/default/objects/PurchasePlan__c/fields/DeadLineDatetime__c.field-meta.xml
<CustomField>
    <fullName>DeadLineDatetime__c</fullName>
    <label>Deadline Datetime</label>
    <type>DateTime</type>
</CustomField>