force-app/main/default/objects/PurchasePlan__c/fields/DeadLineExtension__c.field-meta.xml
<CustomField>
    <fullName>DeadLineExtension__c</fullName>
    <label>Deadline Extension</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>