force-app/main/default/objects/PurchasePlan__c/fields/DeadLineReason__c.field-meta.xml
<CustomField>
    <fullName>DeadLineReason__c</fullName>
    <label>Deadline Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>