force-app/main/default/objects/PurchasePlan__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <label>DeliveryDate</label>
    <type>Date</type>
</CustomField>