force-app/main/default/objects/PurchasePlan__c/fields/DeliveryLocation__c.field-meta.xml
<CustomField>
    <fullName>DeliveryLocation__c</fullName>
    <label>Delivery Location</label>
    <type>TextArea</type>
</CustomField>