force-app/main/default/objects/PurchasePlan__c/fields/DeliveryMethodDescription__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethodDescription__c</fullName>
    <label>Delivery Method Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>