force-app/main/default/objects/PurchasePlan__c/fields/EvaluationDetails__c.field-meta.xml
<CustomField>
    <fullName>EvaluationDetails__c</fullName>
    <description>Price, Non Price Rate Input</description>
    <label>Evaluation Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>