force-app/main/default/objects/PurchasePlan__c/fields/EvaluationMethod__c.field-meta.xml
<CustomField>
    <fullName>EvaluationMethod__c</fullName>
    <label>Evaluation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LowestPrice</fullName>
                <label>Lowest Price</label>
            </value>
            <value>
                <fullName>LimitedLowestPrice</fullName>
                <label>Limited Lowest Price</label>
            </value>
            <value>
                <fullName>ComprehensiveEvaluation</fullName>
                <label>Comprehensive Evaluation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>