force-app/main/default/objects/PurchasePlan__c/fields/EvaluationSummary__c.field-meta.xml
<CustomField>
    <fullName>EvaluationSummary__c</fullName>
    <label>Evaluation Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>