force-app/main/default/objects/PurchasePlan__c/fields/IsSupplierVisible__c.field-meta.xml
<CustomField>
    <fullName>IsSupplierVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplier Portal Active</label>
    <type>Checkbox</type>
</CustomField>