force-app/main/default/objects/PurchasePlan__c/fields/JoinSupplier__c.field-meta.xml
<CustomField>
    <fullName>JoinSupplier__c</fullName>
    <label>Join Supplier</label>
    <summaryFilterItems>
        <field>PurchasePlanSupplier__c.QuotationStatus__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>PurchasePlanSupplier__c.PurchasePlanId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>