force-app/main/default/objects/PurchasePlan__c/fields/LatestRound__c.field-meta.xml
<CustomField>
    <fullName>LatestRound__c</fullName>
    <label>Latest Round</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>