force-app/main/default/objects/PurchasePlan__c/fields/LiquidatedDamages__c.field-meta.xml
<CustomField>
    <fullName>LiquidatedDamages__c</fullName>
    <label>Liquidated Damages</label>
    <length>20</length>
    <type>Text</type>
</CustomField>