force-app/main/default/objects/PurchasePlan__c/fields/NoticeDate__c.field-meta.xml
<CustomField>
    <fullName>NoticeDate__c</fullName>
    <label>Notice Date</label>
    <type>DateTime</type>
</CustomField>