force-app/main/default/objects/PurchasePlan__c/fields/OpenEndDate__c.field-meta.xml
<CustomField>
    <fullName>OpenEndDate__c</fullName>
    <label>Open End Date</label>
    <type>Date</type>
</CustomField>