force-app/main/default/objects/PurchasePlan__c/fields/OpenStartDate__c.field-meta.xml
<CustomField>
    <fullName>OpenStartDate__c</fullName>
    <label>Open Start Date</label>
    <type>Date</type>
</CustomField>