force-app/main/default/objects/PurchasePlan__c/fields/PartialBidding__c.field-meta.xml
<CustomField>
    <fullName>PartialBidding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Bidding</label>
    <type>Checkbox</type>
</CustomField>