force-app/main/default/objects/PurchasePlan__c/fields/PaymentMethodDescription__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodDescription__c</fullName>
    <label>Payment Method Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>