force-app/main/default/objects/PurchasePlan__c/fields/ProposalPresentation__c.field-meta.xml
<CustomField>
    <fullName>ProposalPresentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProposalPresentation</label>
    <type>Checkbox</type>
</CustomField>