force-app/main/default/objects/PurchasePlan__c/fields/PurchaseRequest__c.field-meta.xml
<CustomField>
    <fullName>PurchaseRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Request</label>
    <referenceTo>PurchaseRequest__c</referenceTo>
    <relationshipLabel>Purchase Plan</relationshipLabel>
    <relationshipName>RFX</relationshipName>
    <type>Lookup</type>
</CustomField>