force-app/main/default/objects/PurchasePlan__c/fields/PurchaseType__c.field-meta.xml
<CustomField>
    <fullName>PurchaseType__c</fullName>
    <label>PurchaseType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GeneralPurchase</fullName>
                <label>General Purchase</label>
            </value>
            <value>
                <fullName>UnitPriceContract</fullName>
                <label>UnitPrice Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>