force-app/main/default/objects/PurchasePlan__c/fields/QuotationType__c.field-meta.xml
<CustomField>
    <fullName>QuotationType__c</fullName>
    <label>Quotation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nomination</fullName>
            </value>
            <value>
                <fullName>NegotiateContract</fullName>
                <label>Negotiate Contract</label>
            </value>
            <value>
                <fullName>CompetitiveBidding</fullName>
                <label>Competitive Bidding</label>
            </value>
            <value>
                <fullName>ExclusiveBidding</fullName>
                <isActive>false</isActive>
                <label>Exclusive Bidding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>