force-app/main/default/objects/PurchasePlan__c/fields/RebidFlag__c.field-meta.xml
<CustomField>
    <fullName>RebidFlag__c</fullName>
    <label>Rebid Flag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>