force-app/main/default/objects/PurchasePlan__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>