force-app/main/default/objects/PurchasePlan__c/fields/ReqestEndDate__c.field-meta.xml
<CustomField>
    <fullName>ReqestEndDate__c</fullName>
    <label>Request End Date</label>
    <type>Date</type>
</CustomField>