force-app/main/default/objects/PurchasePlan__c/fields/RequestDepartment__c.field-meta.xml
<CustomField>
    <fullName>RequestDepartment__c</fullName>
    <label>Request Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>