force-app/main/default/objects/PurchasePlan__c/fields/SelectionReason__c.field-meta.xml
<CustomField>
    <fullName>SelectionReason__c</fullName>
    <label>Selection Reason</label>
    <type>TextArea</type>
</CustomField>