force-app/main/default/objects/PurchasePlan__c/fields/SiteSession__c.field-meta.xml
<CustomField>
    <fullName>SiteSession__c</fullName>
    <label>Site Session</label>
    <type>DateTime</type>
</CustomField>