force-app/main/default/objects/PurchasePlan__c/fields/SiteSessionDate__c.field-meta.xml
<CustomField>
    <fullName>SiteSessionDate__c</fullName>
    <label>Site Session Date</label>
    <type>DateTime</type>
</CustomField>