force-app/main/default/objects/PurchasePlan__c/fields/SiteSessionFlag__c.field-meta.xml
<CustomField>
    <fullName>SiteSessionFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Session Flag</label>
    <type>Checkbox</type>
</CustomField>