force-app/main/default/objects/PurchasePlan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>BiddingNotice</fullName>
                <label>Bidding Notice</label>
            </value>
            <value>
                <fullName>Quotation/Bidding</fullName>
            </value>
            <value>
                <fullName>Deadline</fullName>
            </value>
            <value>
                <fullName>EvaluationRequest</fullName>
                <label>Evaluation Request</label>
            </value>
            <value>
                <fullName>EvaluationCompleted</fullName>
                <label>Evaluation Completed</label>
            </value>
            <value>
                <fullName>Drop</fullName>
            </value>
            <value>
                <fullName>SupplierSelection</fullName>
                <label>Supplier Selection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>