force-app/main/default/objects/PurchasePlan__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selected Supplier</description>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Purchase Plan</relationshipLabel>
    <relationshipName>purchasePlanSupplier</relationshipName>
    <type>Lookup</type>
</CustomField>