force-app/main/default/objects/PurchasePlan__c/fields/SupplierCount__c.field-meta.xml
<CustomField>
    <fullName>SupplierCount__c</fullName>
    <label>Supplier Count</label>
    <summaryForeignKey>PurchasePlanSupplier__c.PurchasePlanId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>