force-app/main/default/objects/PurchasePlan__c/fields/SupplierSelection__c.field-meta.xml
<CustomField>
    <fullName>SupplierSelection__c</fullName>
    <label>Supplier Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InProgress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>SupplierSelected</fullName>
                <label>Supplier Selected</label>
            </value>
            <value>
                <fullName>FailedInBidding</fullName>
                <label>Failed In Bidding</label>
            </value>
            <value>
                <fullName>Reestimate</fullName>
            </value>
            <value>
                <fullName>SupplierCanceled</fullName>
                <label>Supplier Canceled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>