force-app/main/default/objects/PurchasePlan__c/fields/SupplierSelectionCancelReason__c.field-meta.xml
<CustomField>
    <fullName>SupplierSelectionCancelReason__c</fullName>
    <label>Supplier Selection Cancelled Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>