force-app/main/default/objects/PurchasePlan__c/fields/TemplateBid__c.field-meta.xml
<CustomField>
    <fullName>TemplateBid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Template</label>
    <type>Checkbox</type>
</CustomField>