force-app/main/default/objects/PurchasePlan__c/fields/TotalAmount_Item__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount_Item__c</fullName>
    <label>Total Amount/Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TotalAmount</fullName>
                <label>Total Amount</label>
            </value>
            <value>
                <fullName>Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>