force-app/main/default/objects/PurchasePlan__c/fields/TotalJoinedSupplier__c.field-meta.xml
<CustomField>
    <fullName>TotalJoinedSupplier__c</fullName>
    <formula>TEXT(JoinSupplier__c) + &apos;/&apos; + TEXT(SupplierCount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Joined Suppliers/Total Suppliers</inlineHelpText>
    <label>Total Joined Supplier</label>
    <type>Text</type>
</CustomField>