force-app/main/default/objects/PurchasePlan__c/fields/WinningMethod__c.field-meta.xml
<CustomField>
    <fullName>WinningMethod__c</fullName>
    <label>Winning Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>