force-app/main/default/objects/PurchasePlan__c/recordTypes/RFP.recordType-meta.xml
<RecordType>
    <fullName>RFP</fullName>
    <active>true</active>
    <label>RFP</label>
</RecordType>