force-app/main/default/objects/PurchasePlan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AI_RFXNumber__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>QuotationType__c</columns>
    <columns>RequestDate__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>DeliveryLocation__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>